--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
-
+.idea
 # Package Files #
 *.jar
 *.war
@@ -21,6 +21,7 @@
 *.zip
 *.tar.gz
 *.rar
+lib
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
